# fitnesstools

./: .gitignore  Cargo.toml  README.md
src/: bw_coefficients.rs  estimates.rs  lib.rs  util.rs
