[package]
name = "fitnesstools"
version = "0.1.1"
edition = "2021"
description = "Collection of tools related to fitness and weightlifting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/egilmonsas/fitnesstools"

[dependencies]

[profile.dev]
opt-level=0

[profile.release]
opt-level=3

[dev-dependencies]
approx = "0.5.1"
rstest = "0.21.0"
